--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "nodemon main.js",
+    "start-watch": "nodemon main.js",
     "build": "webpack",
-    "build-watch": "npm run build -- -w"
+    "build-watch": "npm run build -- -w",
+    "dev": "concurrently --kill-others \"npm run start-watch\" \"npm run build-watch\""
   },
   "author": "Jonathan Liu",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "pg": "^6.4.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "sequelize": "^4.2.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -25,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.0.2",
+    "concurrently": "^3.5.0",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "webpack": "^3.0.0"
